# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2016-09-19 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update backward-cpp (not updating macro check yet for configure script)
      (backward-cpp claims arm support now)
    * Update external autoconf macros

2016-09-16 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix old configuration entries

2016-09-15 Michael Truog   <mjtruog [at] gmail (dot) com>

    * CloudI version 1.5.3 released
    * Update Python Erlang Binary Term Format source code to
      handle Erlang maps nested as keys in a map

2016-09-14 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Next release will be 1.5.3 instead of 1.5.2 due to dependency updates
    * Update nodefinder and remove dependencies that are no longer necessary
      (erlcloud, eini, lhttpc)
    * Update msgpack
    * Update reltool_util
    * Update jinterface to 1.6.1 (from Erlang/OTP 18.3)
      to match the last maven package version
    * Fix Java CloudI API javadoc comments

2016-08-30 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix autoconf Erlang version check to work with github versions, like
      "18.3.4.1" (with 2 or more separate patch numbers instead of 1)

2016-08-27 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix CloudI Service API services_update timeout bug
    * Change CloudI Service API services_update to use a gradual
      transition between service name pattern subscriptions for
      external service updates so that the new OS process initialization
      occurs before the old OS process subscriptions are removed
    * Change the CloudI API implementations to provide a null response
      when a service name pattern doesn't exist as a subscription, so
      that old service requests that have been queued before an
      external service update automatically get a null response after the
      update is done

2016-08-26 Michael Truog   <mjtruog [at] gmail (dot) com>
