@@ -1,13 +1,13 @@
 // -*- Mode: C++; tab-width: 4; c-basic-offset: 4; indent-tabs-mode: nil -*-
 // ex: set softtabstop=4 tabstop=4 shiftwidth=4 expandtab:
-
-// GENERIC ERLANG PORT [DRIVER] VERSION 0.7 (modified, breaks compatibility)
-// automatically create Erlang functions for C/C++ bindings
-
 //////////////////////////////////////////////////////////////////////////////
+//
+// GENERIC ERLANG PORT [DRIVER]
+// automatically create Erlang bindings to C++/C that requires an OS process
+//
 // BSD LICENSE
 // 
-// Copyright (c) 2009-2015, Michael Truog <mjtruog at gmail dot com>
+// Copyright (c) 2009-2016, Michael Truog <mjtruog at gmail dot com>
 // All rights reserved.
 // 
 // Redistribution and use in source and binary forms, with or without
@@ -51,9 +51,16 @@
 #include <boost/preprocessor/cat.hpp>
 #include <boost/preprocessor/arithmetic/dec.hpp>
 #include <boost/preprocessor/punctuation/paren.hpp>
-#include <boost/preprocessor/tuple/to_seq.hpp>
+//#include <boost/preprocessor/tuple/to_seq.hpp> // broken with boost >= 1.5?
+#include <boost/preprocessor/tuple/to_list.hpp>
+#include <boost/preprocessor/list/for_each.hpp>
 #include <boost/preprocessor/control/if.hpp>
 #include <boost/preprocessor/punctuation/comma.hpp>
+
+// work-around instead of BOOST_PP_TUPLE_TO_SEQ to correctly handle arity 0
+#define TUPLE_TO_SEQ_E(r, data, elem) (elem)
+#define TUPLE_TO_SEQ(I, T) \
+    BOOST_PP_LIST_FOR_EACH(TUPLE_TO_SEQ_E, _, BOOST_PP_TUPLE_TO_LIST(I, T))
 
 #define ENCODE_ARGUMENT_AS_BINARY_FROM_TYPE_char(N) \
     <<CREATE_FUNCTION_ARGUMENTS(_, N, _):8/signed-integer-native>>
@@ -199,7 +206,7 @@
     BOOST_PP_ENUM( \
         GET_ARGC(FUNCTION), \
         CREATE_FUNCTION_ARGUMENTS, \
-        BOOST_PP_TUPLE_TO_SEQ(GET_ARGC(FUNCTION), GET_ARGV(FUNCTION)) \
+        TUPLE_TO_SEQ(GET_ARGC(FUNCTION), GET_ARGV(FUNCTION)) \
     ) \
     BOOST_PP_RPAREN() \
     -> \
@@ -217,7 +224,7 @@
             0,\
             GET_ARGC(FUNCTION),\
             ENCODE_ARGUMENT_AS_BINARY,\
-            BOOST_PP_TUPLE_TO_SEQ(GET_ARGC(FUNCTION), GET_ARGV(FUNCTION))\
+            TUPLE_TO_SEQ(GET_ARGC(FUNCTION), GET_ARGV(FUNCTION))\
         )\
     ]\
     BOOST_PP_RPAREN().
@@ -232,13 +239,14 @@ BOOST_PP_ENUM(BOOST_PP_SEQ_SIZE(FUNCTIONS_SEQUENCE),
 
 BOOST_PP_SEQ_FOR_EACH(CREATE_FUNCTION, _, FUNCTIONS_SEQUENCE)
 
-encode_uint8(Value) when is_list(Value) ->
-    Data = unicode:characters_to_binary(Value),
-    DataSize = erlang:byte_size(Data),
-    <<DataSize:32/unsigned-integer-native, Data/binary>>;
 encode_uint8(Value) when is_binary(Value) ->
     DataSize = erlang:byte_size(Value),
-    <<DataSize:32/unsigned-integer-native, Value/binary>>.
+    <<DataSize:32/unsigned-integer-native, Value/binary>>;
+encode_uint8(Value) when is_list(Value) ->
+    ValueList = [<<E:8/unsigned-integer-native>> || E <- Value],
+    Data = erlang:list_to_binary(ValueList),
+    DataSize = length(ValueList),
+    <<DataSize:32/unsigned-integer-native, Data/binary>>.
 
 encode_uint32(Value) when is_list(Value) ->
     ValueList = [<<E:32/unsigned-integer-native>> || E <- Value],
