@@ -1,6 +1,10 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fenc=utf-8 sts=4 ts=4 et nomod:
 
+2016-09-20 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Update GEPD dependency with commit/tag/file specifics
+
 2016-09-19 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Update backward-cpp (not updating macro check yet for configure script)
